# tic-tac-toe

./: pyproject.toml
tic-tac-toe/: main.py
