[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["odeya <odeyah3@gmail.com>"]
readme = "README.md"
packages = [{include = "tic_tac_toe"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
